--- a/acarshub-react/index.html
+++ b/acarshub-react/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/acarshub.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/src/assets/images/acarshub-favicon.svg"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ACARS Hub</title>
   </head>
